# rp2040-usb-control-console

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
scripts/: flash.ps1
src/: main.rs  status_led.rs  usb_console.rs
